# aero-ogn-receiver

./: .gitignore  MANIFEST.in  QUICKSTART.md  README.md  SECURITY.md  THIRD_PARTY.md  pyproject.toml  setup.py
aero_ogn_receiver/: __init__.py  __main__.py
aero_ogn_receiver/cli/: __init__.py  binaries.py  config.py  healthcheck.py  logs.py  main.py  service.py  status.py
aero_ogn_receiver/core/: __init__.py  architecture.py  config_model.py  manifest.py  paths.py  render.py  systemd.py
aero_ogn_receiver/setup/: __init__.py  setup.py  uninstall.py  venv_readme.py
aero_ogn_receiver/templates/: aero-ogn-decode.service  aero-ogn-receiver.target  aero-ogn-rf.service
aero_pi_ogn_receiver/: __init__.py  __main__.py
aero_pi_ogn_receiver/cli/: __init__.py  aircraft.py  binaries.py  config.py  healthcheck.py  logs.py  main.py  service.py  status.py
aero_pi_ogn_receiver/core/: __init__.py  checksums.py  config_model.py  manifest.py  paths.py  render.py  simple_yaml.py  systemd.py
aero_pi_ogn_receiver/data/: config.example.yaml  ogn-binaries.yaml
aero_pi_ogn_receiver/setup/: __init__.py  setup.py  uninstall.py  (+1 more)
docs/: README.md  _config.yml  advanced-usage.md  binaries.md  cli.md  development.md  index.html  index.md  installation.md  maintenance.md  operation.md  quickstart.md  security.md  troubleshooting.md
scripts/: install.sh
tests/: test_aircraft.py  test_architecture.py  test_checksums.py  test_cli.py  test_config_validation.py  test_install_script.py  test_logs.py  test_manifest.py  test_render.py  test_setup.py  test_status.py  test_systemd.py
(+7 files in other folders)
