[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aero-pi-ogn-receiver"
version = "1.0.0"
description = "Installable OGN/FLARM receiver manager for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "Caen Falaise Planeurs" }
]
keywords = ["ogn", "flarm", "raspberry-pi", "rtlsdr", "receiver"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
]
dependencies = []

[project.scripts]
aero-pi-ogn = "aero_pi_ogn_receiver.cli.main:main"
aero-pi-ogn-setup = "aero_pi_ogn_receiver.setup.setup:main"
aero-pi-ogn-uninstall = "aero_pi_ogn_receiver.setup.uninstall:main"

[tool.setuptools.packages.find]
include = ["aero_pi_ogn_receiver*"]

[tool.setuptools.package-data]
aero_pi_ogn_receiver = ["data/*.yaml", "templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
